[package]
name = "open_plate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
postgres = {version = "0.19.3" , features = ["with-serde_json-1"] }
postgres-types = {version = "0.2.3", features = ["derive", "with-chrono-0_4"]}